3xtrat3rr3str3D-backend/src/main/java/org/jrg/antlrBase/zetariano/ZetarianoParser.java
// Generated from org/jrg/antlrBase/zetariano/Zetariano.g4 by ANTLR 4.13.2
package org.jrg.antlrBase.zetariano;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ZetarianoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PUBLIC=1, CLASS=2, VOID=3, NEW=4, NULL=5, INT=6, DOUBLE=7, CHAR=8, BOOLEAN=9, 
		STRING=10, TRUE=11, FALSE=12, IF=13, ELSE=14, SWITCH=15, CASE=16, DEFAULT=17, 
		FOR=18, WHILE=19, DO=20, BREAK=21, CONTINUE=22, RETURN=23, INCREMENTO=24, 
		DECREMENTO=25, IGUAL_QUE=26, DIFERENTE_QUE=27, MAYOR_IGUAL_QUE=28, MENOR_IGUAL_QUE=29, 
		MAYOR_QUE=30, MENOR_QUE=31, AND=32, OR=33, NEGACION=34, MAS_IGUAL=35, 
		MENOS_IGUAL=36, MULT_IGUAL=37, ASIGNACION=38, INTERROGACION=39, SUMA=40, 
		RESTA=41, MULT=42, DIV=43, MOD=44, CORCHETE_IZQ=45, CORCHETE_DER=46, LLAVE_IZQ=47, 
		LLAVE_DER=48, PAR_IZQ=49, PAR_DER=50, PUNTO_Y_COMA=51, DOS_PUNTOS=52, 
		COMA=53, PUNTO=54, CADENA=55, CARACTER=56, NUMERO_DECIMAL=57, NUMERO_ENTERO=58, 
		IDENTIFICADOR=59, COMENTARIO_LINEA=60, COMENTARIO_BLOQUE=61, ESPACIOS_BLANCO=62;
	public static final int
		RULE_programa = 0, RULE_definicion_clase = 1, RULE_miembro_clase = 2, 
		RULE_tipo_dato = 3, RULE_atributo_clase = 4, RULE_constructor = 5, RULE_metodo = 6, 
		RULE_parametros = 7, RULE_parametro = 8, RULE_instruccion = 9, RULE_declaracion_variable = 10, 
		RULE_init_matriz = 11, RULE_init_elemento = 12, RULE_asignacion = 13, 
		RULE_variable_asignable = 14, RULE_condicional = 15, RULE_bloque = 16, 
		RULE_seleccion = 17, RULE_caso_switch = 18, RULE_caso_default = 19, RULE_ciclo = 20, 
		RULE_init_for = 21, RULE_paso_for = 22, RULE_expresion = 23, RULE_valor_primitivo = 24, 
		RULE_lista_expresiones = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "definicion_clase", "miembro_clase", "tipo_dato", "atributo_clase", 
			"constructor", "metodo", "parametros", "parametro", "instruccion", "declaracion_variable", 
			"init_matriz", "init_elemento", "asignacion", "variable_asignable", "condicional", 
			"bloque", "seleccion", "caso_switch", "caso_default", "ciclo", "init_for", 
			"paso_for", "expresion", "valor_primitivo", "lista_expresiones"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'public'", "'class'", "'void'", "'new'", "'null'", "'int'", "'double'", 
			"'char'", "'boolean'", "'String'", "'true'", "'false'", "'if'", "'else'", 
			"'switch'", "'case'", "'default'", "'for'", "'while'", "'do'", "'break'", 
			"'continue'", "'return'", "'++'", "'--'", "'=='", "'!='", "'>='", "'<='", 
			"'>'", "'<'", "'&&'", "'||'", "'!'", "'+='", "'-='", "'*='", "'='", "'?'", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'['", "']'", "'{'", "'}'", "'('", 
			"')'", "';'", "':'", "','", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PUBLIC", "CLASS", "VOID", "NEW", "NULL", "INT", "DOUBLE", "CHAR", 
			"BOOLEAN", "STRING", "TRUE", "FALSE", "IF", "ELSE", "SWITCH", "CASE", 
			"DEFAULT", "FOR", "WHILE", "DO", "BREAK", "CONTINUE", "RETURN", "INCREMENTO", 
			"DECREMENTO", "IGUAL_QUE", "DIFERENTE_QUE", "MAYOR_IGUAL_QUE", "MENOR_IGUAL_QUE", 
			"MAYOR_QUE", "MENOR_QUE", "AND", "OR", "NEGACION", "MAS_IGUAL", "MENOS_IGUAL", 
			"MULT_IGUAL", "ASIGNACION", "INTERROGACION", "SUMA", "RESTA", "MULT", 
			"DIV", "MOD", "CORCHETE_IZQ", "CORCHETE_DER", "LLAVE_IZQ", "LLAVE_DER", 
			"PAR_IZQ", "PAR_DER", "PUNTO_Y_COMA", "DOS_PUNTOS", "COMA", "PUNTO", 
			"CADENA", "CARACTER", "NUMERO_DECIMAL", "NUMERO_ENTERO", "IDENTIFICADOR", 
			"COMENTARIO_LINEA", "COMENTARIO_BLOQUE", "ESPACIOS_BLANCO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Zetariano.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ZetarianoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public Definicion_claseContext definicion_clase() {
			return getRuleContext(Definicion_claseContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ZetarianoParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			definicion_clase();
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Definicion_claseContext extends ParserRuleContext {
		public Definicion_claseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion_clase; }
	 
		public Definicion_claseContext() { }
		public void copyFrom(Definicion_claseContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DefClaseContext extends Definicion_claseContext {
		public TerminalNode PUBLIC() { return getToken(ZetarianoParser.PUBLIC, 0); }
		public TerminalNode CLASS() { return getToken(ZetarianoParser.CLASS, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(ZetarianoParser.IDENTIFICADOR, 0); }
		public TerminalNode LLAVE_IZQ() { return getToken(ZetarianoParser.LLAVE_IZQ, 0); }
		public TerminalNode LLAVE_DER() { return getToken(ZetarianoParser.LLAVE_DER, 0); }
		public List<Miembro_claseContext> miembro_clase() {
			return getRuleContexts(Miembro_claseContext.class);
		}
		public Miembro_claseContext miembro_clase(int i) {
			return getRuleContext(Miembro_claseContext.class,i);
		}
		public DefClaseContext(Definicion_claseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterDefClase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitDefClase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitDefClase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Definicion_claseContext definicion_clase() throws RecognitionException {
		Definicion_claseContext _localctx = new Definicion_claseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definicion_clase);
		int _la;
		try {
			_localctx = new DefClaseContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(PUBLIC);
			setState(56);
			match(CLASS);
			setState(57);
			match(IDENTIFICADOR);
			setState(58);
			match(LLAVE_IZQ);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 576460752303425474L) != 0)) {
				{
				{
				setState(59);
				miembro_clase();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(LLAVE_DER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Miembro_claseContext extends ParserRuleContext {
		public Miembro_claseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_miembro_clase; }
	 
		public Miembro_claseContext() { }
		public void copyFrom(Miembro_claseContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MiembroAtributoContext extends Miembro_claseContext {
		public Atributo_claseContext atributo_clase() {
			return getRuleContext(Atributo_claseContext.class,0);
		}
		public MiembroAtributoContext(Miembro_claseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterMiembroAtributo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitMiembroAtributo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitMiembroAtributo(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MiembroMetodoContext extends Miembro_claseContext {
		public MetodoContext metodo() {
			return getRuleContext(MetodoContext.class,0);
		}
		public MiembroMetodoContext(Miembro_claseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterMiembroMetodo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitMiembroMetodo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitMiembroMetodo(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MiembroConstructorContext extends Miembro_claseContext {
		public ConstructorContext constructor() {
			return getRuleContext(ConstructorContext.class,0);
		}
		public MiembroConstructorContext(Miembro_claseContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterMiembroConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitMiembroConstructor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitMiembroConstructor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Miembro_claseContext miembro_clase() throws RecognitionException {
		Miembro_claseContext _localctx = new Miembro_claseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_miembro_clase);
		try {
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new MiembroAtributoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				atributo_clase();
				}
				break;
			case 2:
				_localctx = new MiembroConstructorContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				constructor();
				}
				break;
			case 3:
				_localctx = new MiembroMetodoContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				metodo();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tipo_datoContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(ZetarianoParser.INT, 0); }
		public TerminalNode DOUBLE() { return getToken(ZetarianoParser.DOUBLE, 0); }
		public TerminalNode CHAR() { return getToken(ZetarianoParser.CHAR, 0); }
		public TerminalNode BOOLEAN() { return getToken(ZetarianoParser.BOOLEAN, 0); }
		public TerminalNode STRING() { return getToken(ZetarianoParser.STRING, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(ZetarianoParser.IDENTIFICADOR, 0); }
		public Tipo_datoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_dato; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterTipo_dato(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitTipo_dato(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitTipo_dato(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tipo_datoContext tipo_dato() throws RecognitionException {
		Tipo_datoContext _localctx = new Tipo_datoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipo_dato);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 576460752303425472L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
